<resources>
    <string name="app_name">MultiActivityApp</string>
    <string name="insert_your_name">Olá!</string>
    <string name="instructions">Insira seu nome, suas duas notas (de 0 a 10) e sua frequência (de 0 a 100) para obter seu status.</string>
    <string name="first_rating">Primeira nota</string>
    <string name="name">Seu nome</string>
    <string name="second_rating">Segunda nota</string>
    <string name="frequency">Frequência</string>
    <string name="proceed">Prosseguir</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_rating">Nota inválida</string>
    <string name="invalid_frequency">Frequência inválida</string>
    <string name="you_are">%s, você está</string>
    <string name="status_approved">Aprovado!</string>
    <string name="your_average_rating_was">Sua média final foi de %.2f</string>
    <string name="your_frequency_was">E você esteve presente em %d%% das aulas</string>
    <string name="disapproved_by_rating">Reprovado por nota</string>
    <string name="disapproved_by_frequency">Reprovado por frequência</string>
    <string name="approved">Aprovado</string>
    <string name="final_exam">Em prova final</string>
</resources>